Fix content of progress bars in table views being invisible

--- a/src/main/resources/prob.css
+++ b/src/main/resources/prob.css
@@ -551,7 +551,6 @@
 .table-view {
 	-fx-padding: -1.0;
 	-fx-table-cell-border-color: transparent;
-	-fx-accent: transparent;
 }
 .tree-table-view {
 	-fx-padding: -1.0;
